fixed spacing issues on footer and contact

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 footer {
-  margin: 20px;
+  margin-top: 20px;
 }
 /* #dropdown-menu {
   margin-left: auto !important
